// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Element renders an accordion 1`] = `
<div
  aria-multiselectable="true"
  className="tribe-editor__accordion"
  role="tablist"
>
  <article
    className="tribe-editor__accordion__row"
  >
    <button
      aria-controls="accordion-content-123"
      aria-expanded="false"
      aria-selected="false"
      className="tribe-editor__button tribe-editor__accordion__row-header header-class"
      id="accordion-header-123"
      onClick={[Function]}
      role="tab"
      type="button"
    >
      this is header
    </button>
    <div
      aria-hidden="true"
      aria-labelledby="accordion-header-123"
      className="tribe-editor__accordion__row-content content-class"
      id="accordion-content-123"
      role="tabpanel"
    >
      this is a content
    </div>
  </article>
</div>
`;

exports[`Accordion Element renders an accordion with wrapper class 1`] = `
<div
  aria-multiselectable="true"
  className="tribe-editor__accordion test-class"
  role="tablist"
>
  <article
    className="tribe-editor__accordion__row"
  >
    <button
      aria-controls="accordion-content-123"
      aria-expanded="false"
      aria-selected="false"
      className="tribe-editor__button tribe-editor__accordion__row-header header-class"
      id="accordion-header-123"
      onClick={[Function]}
      role="tab"
      type="button"
    >
      this is header
    </button>
    <div
      aria-hidden="true"
      aria-labelledby="accordion-header-123"
      className="tribe-editor__accordion__row-content content-class"
      id="accordion-content-123"
      role="tabpanel"
    >
      this is a content
    </div>
  </article>
</div>
`;

exports[`Accordion Element renders null 1`] = `null`;
